# nbvplanner_dcsp_mod

./: README.md
dcsp/: CMakeLists.txt  README.md  package.xml
dcsp/include/dcsp/: dcsp.h
dcsp/launch/: dcsp_server_spinup.launch
dcsp/msg/: agentViewElement.msg  customPoint.msg  dcsp_msg.msg
dcsp/src/: dcsp.cpp  dcsp_node.cpp  dcsp_server_1.cpp  dcsp_server_1_client.cpp  dcsp_server_2.cpp  dcsp_server_2_client.cpp  dcsp_server_3.cpp  dcsp_server_3_client.cpp
dcsp/srv/: dcsp_srv.srv
frontier_detection/: CMakeLists.txt  package.xml
frontier_detection/include/frontier_detection/: freespace_frontier_extractor.h
frontier_detection/src/: freespace_frontier_detection_node.cpp  freespace_frontier_extractor.cpp  freespace_frontier_representative.cpp
frontier_detection/srv/: frontier_srv.srv
interface_nbvp_rotors/: CMakeLists.txt
interface_nbvp_rotors/launch/: flat_exploration.launch  mav_inspector.launch  multiagent_flat_exploration.launch
interface_nbvp_rotors/src/: exploration.cpp
interface_nbvp_rotors/worlds/: world1.world  world2.world  world3.world  world4.world
nbvplanner/: CMakeLists.txt  package.xml
nbvplanner/data/2017_10_5_12_25_17/: path.txt  response.txt  tree0.txt  tree1.txt  tree10.txt  tree2.txt  tree3.txt  tree4.txt  tree5.txt  tree6.txt  tree7.txt  tree8.txt  tree9.txt
nbvplanner/data/2017_10_5_12_4_4/: path.txt  response.txt  tree0.txt  tree1.txt  tree10.txt  tree100.txt  tree101.txt  tree102.txt  tree103.txt  tree104.txt  tree105.txt  tree106.txt  tree107.txt  tree108.txt  tree109.txt  tree11.txt  tree110.txt  tree12.txt  tree13.txt  tree14.txt  tree15.txt  tree16.txt  tree17.txt  tree18.txt  tree19.txt  tree2.txt  tree20.txt  tree21.txt  tree22.txt  tree23.txt  tree24.txt  tree25.txt  tree26.txt  tree27.txt  tree28.txt  tree29.txt  tree3.txt  tree30.txt  tree31.txt  tree32.txt  (+73 more)
nbvplanner/data/2017_10_5_7_10_35/: path.txt  response.txt  tree0.txt  tree1.txt  tree10.txt  tree11.txt  tree12.txt  tree13.txt  tree14.txt  tree15.txt  tree16.txt  tree17.txt  tree18.txt  tree19.txt  tree2.txt  tree20.txt  tree21.txt  tree22.txt  tree23.txt  tree24.txt  tree25.txt  tree26.txt  tree27.txt  tree28.txt  tree29.txt  tree3.txt  tree30.txt  tree31.txt  tree32.txt  tree33.txt  tree34.txt  tree35.txt  tree36.txt  tree37.txt  tree38.txt  tree39.txt  tree4.txt  tree40.txt  tree41.txt  tree42.txt  (+59 more)
nbvplanner/data/2017_10_5_7_30_45/: path.txt  response.txt  tree0.txt  tree1.txt  tree10.txt  tree11.txt  tree12.txt  tree13.txt  tree14.txt  tree15.txt  tree16.txt  tree17.txt  tree18.txt  tree19.txt  tree2.txt  tree20.txt  tree21.txt  tree22.txt  tree23.txt  tree24.txt  tree25.txt  tree26.txt  tree27.txt  tree28.txt  tree29.txt  tree3.txt  tree30.txt  tree31.txt  tree32.txt  tree33.txt  tree34.txt  tree35.txt  tree36.txt  tree37.txt  tree38.txt  tree39.txt  tree4.txt  tree40.txt  tree41.txt  tree42.txt  (+25 more)
nbvplanner/data/2017_11_17_12_59_44/: path.txt  response.txt  tree0.txt  tree1.txt  tree10.txt  tree100.txt  tree101.txt  tree11.txt  tree12.txt  tree13.txt  tree14.txt  tree15.txt  tree16.txt  tree17.txt  tree18.txt  tree19.txt  tree2.txt  tree20.txt  tree21.txt  tree22.txt  tree23.txt  tree24.txt  tree25.txt  tree26.txt  tree27.txt  tree28.txt  tree29.txt  tree3.txt  tree30.txt  tree31.txt  tree32.txt  tree33.txt  tree34.txt  tree35.txt  tree36.txt  tree37.txt  tree38.txt  tree39.txt  tree4.txt  tree40.txt  (+64 more)
nbvplanner/data/2017_11_18_10_5_56/: tree0.txt  tree1.txt
nbvplanner/data/2017_11_18_13_26_31/: tree0.txt  tree1.txt
nbvplanner/data/2017_11_18_13_27_36/: tree0.txt
nbvplanner/data/2017_11_18_13_57_16/: path.txt  response.txt  tree0.txt  tree1.txt  tree2.txt  tree3.txt  tree4.txt  tree5.txt
nbvplanner/data/2017_11_18_14_31_8/: path.txt  response.txt  tree0.txt  tree1.txt  tree2.txt  tree3.txt  tree4.txt  tree5.txt  tree6.txt  tree7.txt
nbvplanner/data/2017_11_18_14_59_4/: tree0.txt  tree1.txt  tree2.txt  tree3.txt  tree4.txt
nbvplanner/data/2017_11_18_15_18_52/: path.txt  response.txt  tree0.txt  tree1.txt  tree10.txt  tree11.txt  tree12.txt  tree13.txt  tree14.txt  tree15.txt  tree16.txt  tree17.txt  tree18.txt  tree19.txt  tree2.txt  tree20.txt  tree21.txt  tree22.txt  tree23.txt  tree24.txt  tree25.txt  tree26.txt  tree27.txt  tree28.txt  tree29.txt  tree3.txt  tree30.txt  tree31.txt  tree32.txt  tree33.txt  tree34.txt  tree35.txt  tree36.txt  tree37.txt  tree38.txt  tree39.txt  tree4.txt  tree40.txt  tree41.txt  tree42.txt  (+23 more)
nbvplanner/data/2017_11_18_15_1_59/: tree0.txt  tree1.txt  tree2.txt  tree3.txt  tree4.txt
nbvplanner/data/2017_11_18_15_28_28/: path.txt  response.txt  tree0.txt  tree1.txt  tree2.txt  tree3.txt  tree4.txt  tree5.txt  tree6.txt  tree7.txt
nbvplanner/data/2017_11_18_15_32_28/: tree0.txt  tree1.txt  tree2.txt
nbvplanner/data/2017_11_18_15_52_43/: tree0.txt  tree1.txt
nbvplanner/data/2017_11_18_15_57_37/: tree0.txt  tree1.txt  tree2.txt  tree3.txt
nbvplanner/data/2017_11_19_12_11_48/: path.txt  response.txt  tree0.txt  tree1.txt  tree10.txt  tree100.txt  tree101.txt  tree102.txt  tree103.txt  tree104.txt  tree105.txt  tree106.txt  tree107.txt  tree108.txt  tree109.txt  tree11.txt  tree110.txt  tree111.txt  tree112.txt  tree113.txt  tree12.txt  tree13.txt  tree14.txt  tree15.txt  tree16.txt  tree17.txt  tree18.txt  tree19.txt  tree2.txt  tree20.txt  tree21.txt  tree22.txt  tree23.txt  tree24.txt  tree25.txt  tree26.txt  tree27.txt  tree28.txt  tree29.txt  tree3.txt  (+76 more)
nbvplanner/data/2017_11_19_12_49_16/: path.txt  response.txt  tree0.txt  tree1.txt  tree10.txt  tree11.txt  tree12.txt  tree13.txt  tree14.txt  tree15.txt  tree16.txt  tree17.txt  tree18.txt  tree19.txt  tree2.txt  tree3.txt  tree4.txt  tree5.txt  tree6.txt  tree7.txt  tree8.txt  tree9.txt
nbvplanner/data/2017_11_19_13_18_2/: path.txt  response.txt  tree0.txt  tree1.txt  tree10.txt  tree11.txt  tree12.txt  tree13.txt  tree14.txt  tree15.txt  tree16.txt  tree17.txt  tree18.txt  tree19.txt  tree2.txt  tree20.txt  tree21.txt  tree22.txt  tree23.txt  tree24.txt  tree25.txt  tree26.txt  tree27.txt  tree28.txt  tree29.txt  (+16 more)
nbvplanner/src/: rrt.cpp
(+464 files in other folders)
