<?xml version="1.0"?>
<package>
    <name>dcsp</name>
    <version>0.0.0</version>
    <description>The dcsp package</description>
    <maintainer email="eranga.charith@gmail.com">charith</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>message_generation</run_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>message_runtime</build_depend>
    <build_depend>message_generation</build_depend>

</package>