<?xml version="1.0"?>
<package>
    <name>frontier_detection</name>
    <version>0.0.0</version>
    <description>The frontier_detection package</description>
    <maintainer email="eranga.charith@gmail.com">charith</maintainer>
    <license>ASL 2.0</license>
    <author>Charith Eranga</author>
    
    <buildtool_depend>catkin</buildtool_depend>
    
    <build_depend>roscpp</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>libpcl-all-dev</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>visualization_msgs</build_depend>
    <build_depend>octomap_msgs</build_depend>
    <build_depend>octomap_ros</build_depend>

    <run_depend>octomap_msgs</run_depend>
    <run_depend>octomap_ros</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>libpcl-all</run_depend>
    <run_depend>pcl_ros</run_depend>
    <run_depend>message_generation</run_depend>
    <run_depend>visualization_msgs</run_depend>

</package>